--- a/index.html
+++ b/index.html
@@ -372,8 +372,7 @@
            </svg>
         </div>
         <div class="footer-text-holder">
-          <h4 class="footer-text">download app</h4>
-          <h5 class="footer-slogan">Show everyone what you can do!</h5>
+          <h2 class="footer-text">download app <span class="footer-slogan">Show everyone what you can do!</span></h2>
         </div>
         </div>
         <div class="footer-btn-shop">
